overflow fixed

--- a/src/LandingPage/LandingPage.scss
+++ b/src/LandingPage/LandingPage.scss
@@ -57,9 +57,9 @@
         text-align: center;
         position: absolute;
         top: 50%;
-        right: 45%;
-        transform: translate(+50%, -50%);
-        width: 100%;
+        left: 3%;
+        transform: translate(0, -50%);
+        width: fit-content;
         text-align: left;
 
         .main-tittle {
